vlib/v/checker/tests/unknown_struct_field_suggest_name.out
vlib/v/checker/tests/unknown_struct_field_suggest_name.vv:11:16: error: type `Points` has no field named `xxxa`.
Did you mean `xxxx`?
    9 |     p := Points{[1], [2], [3]}
   10 |     println('p: $p')
   11 |     for x in p.xxxa {
      |                ~~~~
   12 |         println('x: $x')
   13 |     }
vlib/v/checker/tests/unknown_struct_field_suggest_name.vv:12:19: error: expression does not return a value
   10 |     println('p: $p')
   11 |     for x in p.xxxa {
   12 |         println('x: $x')
      |                      ^
   13 |     }
   14 | }
